add next prev buttons

--- a/index.html
+++ b/index.html
@@ -18,28 +18,15 @@
 </header>
 
 <main id="main">
-<!--    <div class="movie">-->
-<!--        <img src="img/1 (1).jpg">-->
 
-<!--        <div class="movie-info">-->
-
-<!--            <h3>Movie Title</h3>-->
-<!--            <span class="green">-->
-<!--            9.8-->
-<!--        </span>-->
-<!--        </div>-->
-<!--        <div class="overview">-->
-<!--            <h3>overView</h3>-->
-<!--            Lorem ipsum dolor sit amet, consectetur-->
-<!--            adipisicing elit. Ab asperiores cupiditate-->
-<!--            ea excepturi facere natus nisi omnis,-->
-<!--            porro quos temporibus.-->
-<!--        </div>-->
-
-
-<!--    </div>-->
 
 </main>
+
+<div class="buttons">
+    <button id="next" class="btn">Next </button>
+    <button id="prev" class="btn">Prev </button>
+
+</div>
 
 <script src="script.js"></script>
 </body>
