add some features

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 <div class="buttons">
     <button id="next" class="btn">Next </button>
     <button id="prev" class="btn">Prev </button>
+    <h3 id="num">
+
+    </h3>
 
 </div>
 
