--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="img/1 (2).jpg">
+
 
     <title>Movie App</title>
 </head>
@@ -28,7 +30,7 @@
     <h3 id="num">
 
     </h3>
-
+<input id="num2">
 </div>
 
 <script src="script.js"></script>
